fix: Consumer Group별 이벤트 dedup 키 분리하여 시간 단위 랭킹 누락 방지
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>